refactor(vite): 更新配置以支持多入口构建和模块化
- 添加 glob 依赖用于多入口文件扫描
- 修改 throttle 函数为 ES 模块导出
- 更新 HTML 文件使用 type="module" 加载脚本
- 重构 vite.config.js 支持多入口构建和自定义输出路径
- 更新项目索引中的最后修改日期

--- a/vanilla-js/array-unique/index.html
+++ b/vanilla-js/array-unique/index.html
@@ -16,7 +16,7 @@
     .result { background: #f8f9fa; border: 1px solid #e9ecef; border-radius: 8px; padding: 12px; font-family: Menlo, Monaco, Consolas, monospace; font-size: 14px; color: #495057; }
     .tips { color: #666; font-size: 13px; }
   </style>
-  <script defer src="./unique.js"></script>
+  <script type="module" src="./unique.js"></script>
 </head>
 <body>
   <div class="container">
