docs: 更新页面标题添加-test后缀

--- a/vanilla-js/array-unique/index.html
+++ b/vanilla-js/array-unique/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>数组去重（原生 JS）</h1>
+    <h1>数组去重（原生 JS）-test</h1>
 
     <div class="row">
       <div class="tips">输入示例：<code>[1,2,2,3,3,3,"a","a",true,false,true,{"x":1},{"x":1}]</code></div>
