style: 更新项目标题样式并调整描述显示方式
修改项目标题的字体大小和颜色，同时调整项目描述的显示方式，从单行省略改为固定高度显示

--- a/index.html
+++ b/index.html
@@ -125,19 +125,18 @@
       border-color: #667eea;
     }
 
-    .project-description {
-      color: #666;
-      line-height: 1.5;
-      margin-bottom: 15px;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
+    .project-title {
+      font-size: 1.2rem;
+      color: #333;
+      margin-bottom: 2px;
     }
 
     .project-description {
       color: #666;
       line-height: 1.5;
       margin-bottom: 15px;
+      max-height: 20px;
+      overflow: hidden;
     }
 
     .project-meta {
@@ -363,7 +362,7 @@
     </div>
 
     <footer class="footer">
-      <p>最后更新: 2025/10/23 01:01:25</p>
+      <p>最后更新: 2025/10/23 01:32:06</p>
       <p>使用 <code>npm run generate-index</code> 重新生成此页面</p>
     </footer>
   </div>
